--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,18 +1,12 @@
-<header class="header">
+<header>
   <div class="container">
+    <a class="logo" href="">Logo</a>
+
     <nav class="nav">
-      <a class="nav-logo" href="./index.html" aria-label="Site logo">
-        <svg class="nav-logo-icon" width="100" height="30">
-          <use href="{=$icon-path}"></use>
-        </svg>
-      </a>
-      <ul class="nav-list">
-        <li class="nav-item">
-          <a class="nav-link {=$highlight-act}" href="./page-2.html">Page 2</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link {=$highlight-curr}" href="./page-3.html">Page 3</a>
-        </li>
+      <ul class="menu">
+        <li class="menu-item"><a href="" class="menu-link">Home</a></li>
+        <li class="menu-item"><a href="" class="menu-link">About</a></li>
+        <li class="menu-item"><a href="" class="menu-link">Team</a></li>
       </ul>
     </nav>
   </div>
